# tizen_basicGLES

./: CMakeLists.txt  README.md
inc/: basicgles.h  gl_texture_util.h  gl_utils.h  glview.h
src/: basicgles.c  gl.c  gl_texture_util.c  gl_utils.c  glview.c
