cmake_minimum_required(VERSION 3.3)
project(BasicGLES)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SBI_SYSROOT C:/tizen-sdk-2.4/platforms/tizen-2.4/mobile/rootstraps/mobile-2.4-device.core)

include_directories(${SBI_SYSROOT}/usr/include/libxml2)
include_directories(${SBI_SYSROOT}/usr/include)
include_directories(${SBI_SYSROOT}/usr/include/appcore-agent)
include_directories(${SBI_SYSROOT}/usr/include/appfw)
include_directories(${SBI_SYSROOT}/usr/include/attach-panel)
include_directories(${SBI_SYSROOT}/usr/include/badge)
include_directories(${SBI_SYSROOT}/usr/include/base)
include_directories(${SBI_SYSROOT}/usr/include/cairo)
include_directories(${SBI_SYSROOT}/usr/include/calendar-service2)
include_directories(${SBI_SYSROOT}/usr/include/ckm)
include_directories(${SBI_SYSROOT}/usr/include/contacts-svc)
include_directories(${SBI_SYSROOT}/usr/include/content)
include_directories(${SBI_SYSROOT}/usr/include/context-service)
include_directories(${SBI_SYSROOT}/usr/include/dali)
include_directories(${SBI_SYSROOT}/usr/include/dali-toolkit)
include_directories(${SBI_SYSROOT}/usr/include/dbus-1.0)
include_directories(${SBI_SYSROOT}/usr/include/device)
include_directories(${SBI_SYSROOT}/usr/include/dlog)
include_directories(${SBI_SYSROOT}/usr/include/ecore-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-con-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-evas-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-file-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-imf-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-imf-evas-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-input-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-input-evas-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-ipc-1)
include_directories(${SBI_SYSROOT}/usr/include/ecore-x-1)
include_directories(${SBI_SYSROOT}/usr/include/e_dbus-1)
include_directories(${SBI_SYSROOT}/usr/include/edje-1)
include_directories(${SBI_SYSROOT}/usr/include/eet-1)
include_directories(${SBI_SYSROOT}/usr/include/efl-1)
include_directories(${SBI_SYSROOT}/usr/include/efl-extension)
include_directories(${SBI_SYSROOT}/usr/include/efreet-1)
include_directories(${SBI_SYSROOT}/usr/include/eina-1)
include_directories(${SBI_SYSROOT}/usr/include/eina-1/eina)
include_directories(${SBI_SYSROOT}/usr/include/eio-1)
include_directories(${SBI_SYSROOT}/usr/include/eldbus-1)
include_directories(${SBI_SYSROOT}/usr/include/elementary-1)
include_directories(${SBI_SYSROOT}/usr/include/embryo-1)
include_directories(${SBI_SYSROOT}/usr/include/eo-1)
include_directories(${SBI_SYSROOT}/usr/include/eom)
include_directories(${SBI_SYSROOT}/usr/include/ethumb-1)
include_directories(${SBI_SYSROOT}/usr/include/ethumb-client-1)
include_directories(${SBI_SYSROOT}/usr/include/evas-1)
include_directories(${SBI_SYSROOT}/usr/include/ewebkit2-0)
include_directories(${SBI_SYSROOT}/usr/include/feedback)
include_directories(${SBI_SYSROOT}/usr/include/fontconfig)
include_directories(${SBI_SYSROOT}/usr/include/freetype2)
include_directories(${SBI_SYSROOT}/usr/include/geofence)
include_directories(${SBI_SYSROOT}/usr/include/gio-unix-2.0)
include_directories(${SBI_SYSROOT}/usr/include/glib-2.0)
include_directories(${SBI_SYSROOT}/usr/include/harfbuzz)
include_directories(${SBI_SYSROOT}/usr/include/json-glib-1.0)
include_directories(${SBI_SYSROOT}/usr/include/location)
include_directories(${SBI_SYSROOT}/usr/include/maps)
include_directories(${SBI_SYSROOT}/usr/include/media)
include_directories(${SBI_SYSROOT}/usr/include/media-content)
include_directories(${SBI_SYSROOT}/usr/include/messaging)
include_directories(${SBI_SYSROOT}/usr/include/metadata-editor)
include_directories(${SBI_SYSROOT}/usr/include/minicontrol)
include_directories(${SBI_SYSROOT}/usr/include/minizip)
include_directories(${SBI_SYSROOT}/usr/include/network)
include_directories(${SBI_SYSROOT}/usr/include/notification)
include_directories(${SBI_SYSROOT}/usr/include/phonenumber-utils)
include_directories(${SBI_SYSROOT}/usr/include/sensor)
include_directories(${SBI_SYSROOT}/usr/include/shortcut)
include_directories(${SBI_SYSROOT}/usr/include/storage)
include_directories(${SBI_SYSROOT}/usr/include/system)
include_directories(${SBI_SYSROOT}/usr/include/telephony)
include_directories(${SBI_SYSROOT}/usr/include/ui)
include_directories(${SBI_SYSROOT}/usr/include/web)
include_directories(${SBI_SYSROOT}/usr/include/widget_service)
include_directories(${SBI_SYSROOT}/usr/include/widget_viewer_evas)
include_directories(${SBI_SYSROOT}/usr/include/wifi-direct)
include_directories(${SBI_SYSROOT}/usr/lib/dbus-1.0/include)
include_directories(${SBI_SYSROOT}/usr/lib/glib-2.0/include)

include_directories(inc)

set(SOURCE_FILES
        inc/basicgles.h
        inc/gl_texture_util.h
        inc/gl_utils.h
        inc/glview.h
        src/basicgles.c
        src/gl_texture_util.c
        src/gl_utils.c
        src/glview.c    )

add_executable(BasicGLES ${SOURCE_FILES})